# bobbycar-hardware-remote-v2

./: .gitmodules  README.md
3dmodels/: Bottom.stl  Top.stl
firmware/main/: CMakeLists.txt  analog_sticks.cpp  analog_sticks.h  ble.cpp  ble.h  bobbybuttons.cpp  bobbybuttons.h  bobbychangevaluedisplay.cpp  bobbychangevaluedisplay.h  bobbycheckbox.h  bobbydisplay.cpp  bobbydisplay.h  bobbydisplaywithtitle.cpp  bobbydisplaywithtitle.h  bobbyerrorhandler.cpp  bobbyerrorhandler.h  bobbymenudisplay.cpp  bobbymenudisplay.h  bobbytypesafeenum.h  configutils_bobby.h  configwrapper_bobby.cpp  configwrapper_priv.h  debugconsole.cpp  debugconsole.h  dpad.cpp  dpad.h  dpadimpl.h  dualboot.cpp  dualboot.h  enums.h  globals.cpp  globals.h  main.cpp  pins.h  screens.cpp  screens.h  settings.cpp  settings.h  taskmanager.cpp  taskmanager.h  (+3 more)
firmware/main/accessors/: accessorhelpers.h  settingsaccessors.cpp  settingsaccessors.h
firmware/main/actions/: bleactions.cpp  bleactions.h  gamecontrolleraction.cpp  gamecontrolleraction.h
firmware/main/gamecontroller/: gamecontroller.cpp  gamecontroller.h
firmware/main/icons/: alert.cpp  alert.h  battery.cpp  battery.h  bluetooth.cpp  bluetooth.h  bms.cpp  bms.h  bobbycar.cpp  bobbycar.h  buzzer.cpp  buzzer.h  close.cpp  close.h  demos.cpp  demos.h  git.cpp  git.h  graph.cpp  graph.h  greenpass.cpp  greenpass.h  hardware.cpp  hardware.h  lock.cpp  lock.h  logo.cpp  logo.h  modes.cpp  modes.h  neopixel.cpp  neopixel.h  poweroff.cpp  poweroff.h  presets.cpp  presets.h  reboot.cpp  reboot.h  scan.cpp  scan.h  (+12 more)
firmware/main/menus/: blescanmenu.cpp  blescanmenu.h  blesettingsmenu.cpp  blesettingsmenu.h  mainmenu.cpp  mainmenu.h  settingsmenu.cpp  settingsmenu.h
(+46 files in other folders)
